--- a/ios-app/ios-app/Base.lproj/Main.storyboard
+++ b/ios-app/ios-app/Base.lproj/Main.storyboard
@@ -1,10 +1,85 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="rft-t8-96y">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
+        <!--Setup Controller-->
+        <scene sceneID="k4U-eG-Hjj">
+            <objects>
+                <viewController id="rft-t8-96y" userLabel="Setup Controller" customClass="SetupController" customModule="ios_app" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Q4s-o2-0lH"/>
+                        <viewControllerLayoutGuide type="bottom" id="6kc-BG-d2C"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="eJN-G2-3Qt">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nickname:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UOA-hp-3Vz">
+                                <rect key="frame" x="26" y="74" width="82" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bDR-Aj-b0l">
+                                <rect key="frame" x="113" y="70" width="461" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="YpE-5g-gD0"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="YpE-5g-gD0"/>
+                                    </mask>
+                                </variation>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mp6-N4-3rD">
+                                <rect key="frame" x="225" y="250" width="150" height="35"/>
+                                <color key="backgroundColor" red="0.40000000596046448" green="0.80000001192092896" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="Oih-se-TRv"/>
+                                    <constraint firstAttribute="height" constant="35" id="izh-4C-vAl"/>
+                                </constraints>
+                                <state key="normal" title="Continue">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="saveNickname:" destination="rft-t8-96y" eventType="touchUpInside" id="ZKI-D7-BTg"/>
+                                    <segue destination="BYZ-38-t0r" kind="show" identifier="setupToHomeSegue" id="teD-t8-RSw"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="UOA-hp-3Vz" firstAttribute="leading" secondItem="eJN-G2-3Qt" secondAttribute="leadingMargin" constant="10" id="1ve-PL-xlu"/>
+                            <constraint firstItem="6kc-BG-d2C" firstAttribute="top" secondItem="mp6-N4-3rD" secondAttribute="bottom" constant="150" id="6AI-aG-oft"/>
+                            <constraint firstItem="bDR-Aj-b0l" firstAttribute="centerY" secondItem="UOA-hp-3Vz" secondAttribute="centerY" constant="0.75" id="KIO-u6-YEm"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="bDR-Aj-b0l" secondAttribute="trailing" constant="10" id="OmZ-9Y-mdc"/>
+                            <constraint firstAttribute="centerX" secondItem="bDR-Aj-b0l" secondAttribute="centerX" constant="-0.5" id="ia2-DZ-HGt"/>
+                            <constraint firstItem="mp6-N4-3rD" firstAttribute="top" secondItem="bDR-Aj-b0l" secondAttribute="bottom" constant="150" id="ju5-JU-YSJ"/>
+                            <constraint firstAttribute="centerX" secondItem="mp6-N4-3rD" secondAttribute="centerX" id="kWM-Af-0zD"/>
+                            <constraint firstItem="bDR-Aj-b0l" firstAttribute="leading" secondItem="UOA-hp-3Vz" secondAttribute="trailing" constant="5" id="otB-FV-9hm"/>
+                            <constraint firstItem="bDR-Aj-b0l" firstAttribute="top" secondItem="Q4s-o2-0lH" secondAttribute="bottom" constant="50" id="wuM-p9-bp7"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="ia2-DZ-HGt"/>
+                                <exclude reference="6AI-aG-oft"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <connections>
+                        <outlet property="nicknameTextField" destination="bDR-Aj-b0l" id="Prh-0L-dSE"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GQD-Xo-RrD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-492" y="435"/>
+        </scene>
         <!--Home Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -20,7 +95,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Disconnected" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aTE-Eq-a5h">
                                 <rect key="frame" x="233.5" y="30" width="134" height="25.5"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="●" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZaW-Yb-2Lu">
@@ -40,7 +115,7 @@
                                     <constraint firstAttribute="width" constant="320" id="hEA-eC-fE5"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                                 <variation key="default">
                                     <mask key="constraints">
@@ -75,6 +150,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="262" y="435"/>
         </scene>
     </scenes>
 </document>
